<resources>
    <string name="app_name">Apparat_retrofit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_accounts">All Accounts</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_message_email">Enter Valid Email</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_email_exists">Email Already Exists</string>

    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="password">پسورد</string>
    <string name="input">ورود</string>
    <string name="account">اگر در آپارات حساب کاربری دارید وارد شوید:</string>
    <string name="register">اگر در آپارات حساب کاربری ندارید ثبت نام کنید</string>
    <string name="create">ایجاد حساب کاربری</string>
    <string name="email">ایمیل</string>


</resources>
