<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_login_forward"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/ic_forward_black"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/img_login_forward"
                android:paddingStart="9sp"
                android:text="@string/input"
                android:textSize="21sp"
                android:paddingRight="9sp"
                android:layout_toLeftOf="@+id/img_login_forward"
                android:paddingLeft="9sp" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20sp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_login_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70sp"
            android:text="@string/register"
            android:textColor="@color/color_font_title"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_login_creat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/create" />

        <View
            android:id="@+id/view_login"
            android:layout_width="match_parent"
            android:layout_height="11sp"
            android:layout_marginTop="10sp"
            android:background="#aaa" />

        <TextView
            android:id="@+id/tv_login_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7sp"
            android:text="@string/account"
            android:textColor="@color/color_font_title"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialogEdit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_person1"
                android:drawablePadding="7sp"
                android:drawableRight="@drawable/ic_person1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialogEdit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_person1"
                android:drawablePadding="7sp"
                android:drawableRight="@drawable/ic_person1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/input" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>